--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <h1>AutoFAQ</h1>
-<script type="text/javascript" src="./tokenization.js"></script>
-<script type="text/javascript" src="./model.js"></script>
-<script type="text/javascript" src="./autofaq.js"></script>
+<script async type="text/javascript" src="./autofaq.js"></script>
 <p>AutoFAQ is 100% free</p>
-<p>This is tool to help your site`s visitors</p>
+<p>This is a tool to help your site`s visitors</p>
 <p>The model is fine-tuned MobileBERT</p>
